--- a/reels.html
+++ b/reels.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Void Reels</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
+
     html, body {
       margin: 0;
       padding: 0;
@@ -16,7 +19,12 @@
       scroll-snap-type: y mandatory;
       overflow-y: scroll;
     }
-    #reelContainer { height: 100%; width: 100%; }
+
+    #reelContainer {
+      height: 100%;
+      width: 100%;
+    }
+
     .reel {
       scroll-snap-align: start;
       height: 100vh;
@@ -26,6 +34,7 @@
       align-items: center;
       position: relative;
     }
+
     .reel-inner {
       width: 90%;
       max-width: 540px;
@@ -37,8 +46,8 @@
       align-items: center;
       padding: 1rem;
       position: relative;
-      transition: transform 0.3s ease;
     }
+
     .caption-center {
       position: absolute;
       top: 50%;
@@ -51,14 +60,15 @@
       text-shadow: 0 0 6px #000;
       max-width: 80%;
     }
+
     .user-info {
       position: absolute;
       bottom: 80px;
       left: 10px;
       display: flex;
       align-items: center;
-      transition: transform 0.3s ease;
     }
+
     .user-info img {
       width: 40px;
       height: 40px;
@@ -66,11 +76,13 @@
       margin-right: 10px;
       border: 2px solid #f44;
     }
+
     .username {
       font-weight: bold;
       font-size: 0.9rem;
       color: #ccc;
     }
+
     .actions {
       position: absolute;
       bottom: 80px;
@@ -78,8 +90,8 @@
       display: flex;
       flex-direction: column;
       gap: 15px;
-      transition: transform 0.3s ease;
     }
+
     .actions button {
       background: none;
       border: none;
@@ -87,6 +99,7 @@
       font-size: 1.4rem;
       cursor: pointer;
     }
+
     .comment-box {
       position: absolute;
       bottom: 58px;
@@ -96,6 +109,7 @@
       gap: 10px;
       z-index: 10;
     }
+
     .comment-box input {
       flex: 1;
       padding: 0.5rem;
@@ -104,6 +118,7 @@
       border-radius: 4px;
       color: #ccc;
     }
+
     .comment-box button {
       padding: 0.5rem 0.8rem;
       background-color: #222;
@@ -112,6 +127,7 @@
       color: #ccc;
       cursor: pointer;
     }
+
     .popup {
       position: absolute;
       bottom: 140px;
@@ -128,11 +144,13 @@
       pointer-events: none;
       z-index: 2;
     }
+
     @keyframes fadePop {
       0% { opacity: 0; transform: translateX(-50%) translateY(10px); }
       20% { opacity: 1; }
       100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
     }
+
     .live-counter {
       position: fixed;
       font-size: 0.9rem;
@@ -143,12 +161,10 @@
       border: 1px solid #333;
       z-index: 999;
     }
-    #reels-viewed-counter { bottom: 50px; right: 10px; }
-    #like-counter { bottom: 80px; right: 10px; }
-    #comment-counter { bottom: 110px; right: 10px; }
-    #repost-counter { bottom: 140px; right: 10px; }
-    #bookmark-counter { bottom: 170px; right: 10px; }
-    #scroll-counter { bottom: 200px; right: 10px; }
+
+    #reels-counter { bottom: 50px; right: 10px; }
+    #scroll-counter { bottom: 80px; right: 10px; }
+
     .bottom-nav {
       position: fixed;
       bottom: 0;
@@ -160,6 +176,7 @@
       padding: 0.5rem 0;
       z-index: 1000;
     }
+
     .bottom-nav a {
       color: #888;
       text-decoration: none;
@@ -169,11 +186,7 @@
 </head>
 <body>
   <div id="reelContainer"></div>
-  <div id="reels-viewed-counter" class="live-counter"></div>
-  <div id="like-counter" class="live-counter"></div>
-  <div id="comment-counter" class="live-counter"></div>
-  <div id="repost-counter" class="live-counter"></div>
-  <div id="bookmark-counter" class="live-counter"></div>
+  <div id="reels-counter" class="live-counter"></div>
   <div id="scroll-counter" class="live-counter"></div>
   <div class="bottom-nav">
     <a href="index.html">🏠</a>
@@ -182,7 +195,10 @@
     <a href="reels.html">🎞️</a>
     <a href="profile.html">👤</a>
   </div>
+
   <script>
+    let reelsViewed = parseInt(localStorage.getItem("reelsViewed")) || 0;
+    let scrollCount = parseInt(localStorage.getItem("scrollCount")) || 0;
     const usernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
     const captions = [
       "You're watching nothing.",
@@ -194,31 +210,25 @@
     ];
 
     const container = document.getElementById("reelContainer");
+    const reelsCounter = document.getElementById("reels-counter");
+    const scrollCounter = document.getElementById("scroll-counter");
 
-    let likesGiven = parseInt(localStorage.getItem("likesGiven")) || 0;
-    let reelsViewed = parseInt(localStorage.getItem("reelsViewed")) || 0;
-    let commentsGiven = parseInt(localStorage.getItem("commentsGiven")) || 0;
-    let repostsDone = parseInt(localStorage.getItem("repostsDone")) || 0;
-    let bookmarksDone = parseInt(localStorage.getItem("bookmarksDone")) || 0;
-    let scrollCount = parseInt(localStorage.getItem("scrollCount")) || 0;
-
-    function updateLiveCounters() {
-      document.getElementById("reels-viewed-counter").textContent = `Reels viewed: ${reelsViewed}`;
-      document.getElementById("like-counter").textContent = `Likes given: ${likesGiven}`;
-      document.getElementById("comment-counter").textContent = `Comments: ${commentsGiven}`;
-      document.getElementById("repost-counter").textContent = `Reposts: ${repostsDone}`;
-      document.getElementById("bookmark-counter").textContent = `Bookmarks: ${bookmarksDone}`;
-      document.getElementById("scroll-counter").textContent = `Scrolls done: ${scrollCount}`;
+    function updateStats() {
+      reelsCounter.textContent = `Reels viewed: ${reelsViewed}`;
+      scrollCounter.textContent = `Scrolls done: ${scrollCount}`;
     }
 
     function createReel(username, caption) {
+      reelsViewed++;
+      localStorage.setItem("reelsViewed", reelsViewed);
+      updateStats();
+
       const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
       const reel = document.createElement("div");
       reel.className = "reel";
 
       const inner = document.createElement("div");
       inner.className = "reel-inner";
-
       inner.innerHTML = `
         <div class="caption-center">${caption}</div>
         <div class="user-info">
@@ -226,10 +236,10 @@
           <div class="username">@${username}</div>
         </div>
         <div class="actions">
-          <button onclick="handleLike(this)">❤️</button>
+          <button onclick="handlePopup(this, 'This like did nothing.')">❤️</button>
           <button onclick="toggleCommentBox(this)">💬</button>
-          <button onclick="handleRepost(this)">🔁</button>
-          <button onclick="handleBookmark(this)">📌</button>
+          <button onclick="handlePopup(this, 'Echoed into the abyss.')">🔁</button>
+          <button onclick="handlePopup(this, '📌 Marked meaningless.')">📌</button>
         </div>
         <div class="comment-box">
           <input type="text" placeholder="Say something...">
@@ -249,32 +259,12 @@
       setTimeout(() => popup.remove(), 2500);
     }
 
-    function handleLike(btn) {
-      likesGiven++;
-      localStorage.setItem("likesGiven", likesGiven);
-      updateLiveCounters();
-      handlePopup(btn, "This like did nothing.");
-    }
-
-    function handleRepost(btn) {
-      repostsDone++;
-      localStorage.setItem("repostsDone", repostsDone);
-      updateLiveCounters();
-      handlePopup(btn, "Echoed into the abyss.");
-    }
-
-    function handleBookmark(btn) {
-      bookmarksDone++;
-      localStorage.setItem("bookmarksDone", bookmarksDone);
-      updateLiveCounters();
-      handlePopup(btn, "📌 Marked meaningless.");
-    }
-
     function toggleCommentBox(btn) {
       const inner = btn.closest(".reel-inner");
       const box = inner.querySelector(".comment-box");
       const userInfo = inner.querySelector(".user-info");
       const actions = inner.querySelector(".actions");
+
       const isOpen = box.style.display === "flex";
       box.style.display = isOpen ? "none" : "flex";
       userInfo.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
@@ -284,9 +274,6 @@
     function submitFakeComment(button) {
       const input = button.previousElementSibling;
       if (input.value.trim() !== "") {
-        commentsGiven++;
-        localStorage.setItem("commentsGiven", commentsGiven);
-        updateLiveCounters();
         input.style.transition = "opacity 0.5s ease";
         input.style.opacity = 0;
         setTimeout(() => {
@@ -300,39 +287,25 @@
       }
     }
 
-    let lastScrollTop = 0;
-    let previousReelIndex = -1;
+    function loadMoreReels(count = 6) {
+      for (let i = 0; i < count; i++) {
+        const user = usernames[Math.floor(Math.random() * usernames.length)];
+        const cap = captions[Math.floor(Math.random() * captions.length)];
+        createReel(user, cap);
+      }
+    }
+
     window.addEventListener("scroll", () => {
       scrollCount++;
       localStorage.setItem("scrollCount", scrollCount);
-
-      const reelElements = document.querySelectorAll(".reel");
-      const currentScroll = window.scrollY;
-      let currentIndex = Math.round(currentScroll / window.innerHeight);
-      if (currentIndex !== previousReelIndex) {
-        reelsViewed++;
-        localStorage.setItem("reelsViewed", reelsViewed);
-        previousReelIndex = currentIndex;
-      }
-      updateLiveCounters();
-
-      // Infinite scroll: load 3 more reels when near bottom
-      if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 100) {
-        for (let i = 0; i < 3; i++) {
-          const user = usernames[Math.floor(Math.random() * usernames.length)];
-          const cap = captions[Math.floor(Math.random() * captions.length)];
-          createReel(user, cap);
-        }
+      updateStats();
+      if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 50) {
+        loadMoreReels(4);
       }
     });
 
-    for (let i = 0; i < 10; i++) {
-      const user = usernames[i % usernames.length];
-      const cap = captions[i % captions.length];
-      createReel(user, cap);
-    }
-
-    updateLiveCounters();
+    updateStats();
+    loadMoreReels(10);
   </script>
 </body>
 </html>
